tests/baselines/reference/YieldExpression20_es6.errors.txt
YieldExpression20_es6.ts(3,8): error TS1163: A 'yield' expression is only allowed in a generator body.


==== YieldExpression20_es6.ts (1 errors) ====
    function* test() {
      return () => ({
        b: yield 2, // error
           ~~~~~
!!! error TS1163: A 'yield' expression is only allowed in a generator body.
      });
    }
    